; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_process-util.c_sigkill_wait.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_process-util.c_sigkill_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIGKILL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sigkill_wait(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp sgt i32 %3, 1
  %5 = zext i1 %4 to i32
  %6 = call i32 @assert(i32 %5)
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @SIGKILL, align 4
  %9 = call i64 @kill(i32 %7, i32 %8)
  %10 = icmp sge i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @wait_for_terminate(i32 %12, i32* null)
  br label %14

14:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @kill(i32, i32) #1

declare dso_local i32 @wait_for_terminate(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
